Add VIF to Code

--- a/real_estate.ipynb
+++ b/real_estate.ipynb
@@ -2728,22 +2728,72 @@
         "id": "dukdYxyF6b9R",
         "outputId": "fa73d8a6-a918-4e2c-c1d9-8f071ff7261e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Variance Inflation Factor (VIF) scores:\n",
+            "                                  Feature           VIF\n",
+            "0                     X1 transaction date  4.253389e+07\n",
+            "1                            X2 house age  3.471392e+00\n",
+            "2  X3 distance to the nearest MRT station  4.261358e+00\n",
+            "3         X4 number of convenience stores  4.748152e+00\n",
+            "4                             X5 latitude  6.178301e+06\n",
+            "5                            X6 longitude  4.198817e+07\n"
+          ]
+        }
+      ],
       "source": [
         "# TODO: Import necessary library for VIF calculation\n",
-        "\n",
+        "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
         "\n",
         "# TODO: Define the function calculate_vif\n",
         "def calculate_vif(dataframe, features):\n",
         "    \"\"\"Calculate VIF for each feature in a pandas DataFrame.\"\"\"\n",
-        "    \n",
-        "\n",
+        "    vif_scores = pd.DataFrame()\n",
+        "    vif_scores['Feature'] = features\n",
+        "    vif_scores['VIF'] = [variance_inflation_factor(dataframe[features].values, i) for i in range(len(features))]\n",
         "    return vif_scores\n",
         "\n",
         "# TODO: Define the list of features to check for VIF (excluding 'Y house price of unit area')\n",
+        "feature_columns = df.drop(columns=['Y house price of unit area']).columns.tolist()\n",
+        "\n",
+        "# TODO: Call the function and print the VIF scores\n",
+        "vif_scores = calculate_vif(df, feature_columns)\n",
+        "print(\"Variance Inflation Factor (VIF) scores:\")\n",
+        "print(vif_scores)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "d2c2b3b1",
+      "metadata": {},
+      "source": [
+        "- **Correlation Matrix** tells us which features move in sync with the target variable (“Y house price of unit area”).  \n",
+        "  - High absolute correlation (|corr| ≳ 0.5) means a strong relationship with price.  \n",
+        "- **Variance Inflation Factor (VIF)** reveals multicollinearity among the predictors themselves.  \n",
+        "  - A VIF ≲ 5 is acceptable; VIF > 10 indicates a feature is almost a linear combination of others.\n",
+        "\n",
+        "- **Comparison of Correlation vs. VIF Results**\n",
         "\n",
         "\n",
-        "# TODO: Call the function and print the VIF scores\n"
+        "| Feature                                | Corr with Y |   VIF    | Interpretation                                                                                         |\n",
+        "|----------------------------------------|-----------:|---------:|-------------------------------------------------------------------------------------------------------|\n",
+        "| **X1 transaction date**                |     +0.087  | 4.25×10⁷ | Almost no direct relationship with price, but extreme multicollinearity—drop or transform.            |\n",
+        "| **X2 house age**                       |     –0.211  |   3.47   | Weak negative correlation (older → slightly cheaper), low VIF—safe to keep if it adds domain value.  |\n",
+        "| **X3 distance to nearest MRT station** |     –0.674  |   4.26   | Strong negative correlation (farther → cheaper), low VIF—an excellent predictor, multicollinearity ok.|\n",
+        "| **X4 number of convenience stores**    |     +0.571  |   4.75   | Strong positive correlation, low VIF—top candidate for the model.                                     |\n",
+        "| **X5 latitude**                        |     +0.546  | 6.18×10⁶ | Good correlation, but huge VIF—redundant with longitude &/or transaction date—drop or combine.        |\n",
+        "| **X6 longitude**                       |     +0.523  | 4.20×10⁷ | Decent correlation, but extreme VIF—this and latitude encode the same info—drop or reduce.            |\n",
+        "\n",
+        "- **Keep**:  \n",
+        "  - **X3** (distance to MRT) and **X4** (convenience stores) – both correlate strongly with price and have acceptable VIFs.  \n",
+        "  - **X2** (house age) – although the correlation is modest, multicollinearity is low; include if you expect age to matter.\n",
+        "\n",
+        "- **Drop or Transform**:  \n",
+        "  - **X1**, **X5**, **X6** – extremely high VIFs indicate they’re almost perfect linear combinations of each other. We can Remove or combine to stabilize our regression.\n",
+        "\n"
       ]
     },
     {
