--- a/real_estate.ipynb
+++ b/real_estate.ipynb
@@ -2830,34 +2830,61 @@
         "id": "M_6qbSGl6b9S",
         "outputId": "1845372e-4b2e-4c34-ac7f-569e8c632535"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Shape of Q (orthogonalized features): (414, 6)\n",
+            "Shape of R (upper triangular matrix): (6, 6)\n",
+            "Max correlation (off-diagonal) in original features: 0.8063167695693763\n",
+            "Max correlation (off-diagonal) in orthogonalized features: 2.489328188026718e-16\n"
+          ]
+        }
+      ],
       "source": [
         "# TODO: Import necessary libraries\n",
-        "\n",
-        "\n",
         "# TODO: Define the Gram-Schmidt orthogonalization function\n",
         "def gram_schmidt(X):\n",
         "    \"\"\"\n",
         "    Perform Gram-Schmidt orthogonalization on columns of X.\n",
         "    Returns Q (orthogonal) and R (upper triangular).\n",
         "    \"\"\"\n",
+        "    n, p = X.shape\n",
+        "    Q = np.zeros((n, p))\n",
+        "    R = np.zeros((p, p))\n",
         "\n",
+        "    for j in range(p):\n",
+        "        v = X[:, j]\n",
+        "        for i in range(j):\n",
+        "            R[i, j] = np.dot(Q[:, i], X[:, j])\n",
+        "            v = v - R[i, j] * Q[:, i]\n",
+        "        R[j, j] = np.linalg.norm(v)\n",
+        "        Q[:, j] = v / R[j, j]\n",
         "\n",
         "    return Q, R\n",
         "\n",
         "# TODO: Convert X_scaled to a NumPy array\n",
-        "\n",
+        "X_np = X_scaled.values\n",
         "\n",
         "# TODO: Apply Gram-Schmidt to X_np\n",
-        "\n",
+        "Q, R = gram_schmidt(X_np)\n",
         "\n",
         "# TODO: Print the shapes of Q and R\n",
-        "\n",
+        "print(\"Shape of Q (orthogonalized features):\", Q.shape)\n",
+        "print(\"Shape of R (upper triangular matrix):\", R.shape)\n",
         "\n",
         "# TODO: Compute and compare correlation matrices for original and orthogonalized features\n",
+        "corr_original = np.corrcoef(X_np, rowvar=False)\n",
+        "corr_orthogonal = np.corrcoef(Q, rowvar=False)\n",
         "\n",
+        "# TODO: Print the max correlation (off-diagonal) for original and orthogonalized sets\n",
+        "def max_off_diagonal(corr_matrix):\n",
+        "    np.fill_diagonal(corr_matrix, 0)\n",
+        "    return np.max(np.abs(corr_matrix))\n",
         "\n",
-        "# TODO: Print the max correlation (off-diagonal) for original and orthogonalized sets\n"
+        "print(\"Max correlation (off-diagonal) in original features:\", max_off_diagonal(corr_original))\n",
+        "print(\"Max correlation (off-diagonal) in orthogonalized features:\", max_off_diagonal(corr_orthogonal))"
       ]
     },
     {
