--- a/PCA/PCA.ipynb
+++ b/PCA/PCA.ipynb
@@ -1572,6 +1572,601 @@
     "plt.ylabel('Count')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2888e2be",
+   "metadata": {},
+   "source": [
+    "# Standardization "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "202665ca",
+   "metadata": {},
+   "source": [
+    "Yes, this dataset likely needs standardization as we plan to apply machine learning algorithms that are sensitive to the scale of the data, such as Principal Component Analysis (PCA).\n",
+    "\n",
+    "Standardization ensures that all features contribute equally to the model by scaling them to have a mean of 0 and a standard deviation of 1.\n",
+    "\n",
+    "We Need Standardization because of:\n",
+    "- **Different Scales**: Features like Age, BMI, and BloodPressure might have different ranges, which can bias the results of algorithms that rely on distance metrics.\n",
+    "\n",
+    "- **PCA**: PCA is sensitive to the magnitude of the features because it maximizes variance. Without standardization, features with larger scales will dominate the principal components.\n",
+    "\n",
+    "Only numerical columns are standardized, as categorical columns like Sex, Married, and Smoker do not require scaling."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "0cd8d3ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Age     Sex  BloodPressure  GeneticRisk       BMI  PhysicalActivity  \\\n",
+      "0  0.021912    Male       0.870199     0.421864 -0.824635          0.346857   \n",
+      "1 -0.773424    Male       0.093577     0.334604 -1.154809          0.704042   \n",
+      "2  1.435842    Male       0.559550    -0.952492  0.646140          0.545293   \n",
+      "3 -0.596683  Female      -0.993695    -0.865231 -0.584509         -0.089703   \n",
+      "4  0.110282    Male       0.870199    -0.615915  0.721179         -1.042197   \n",
+      "\n",
+      "  Married           Work   Smoker  Diabetes  \n",
+      "0     Yes  Self-employed  Unknown         0  \n",
+      "1      No         Public  Unknown         0  \n",
+      "2     Yes  Self-employed  Unknown         1  \n",
+      "3     Yes        Private    Never         0  \n",
+      "4     Yes        Private   Smoker         1  \n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# Select numerical columns for standardization\n",
+    "numerical_columns = ['Age', 'BloodPressure', 'GeneticRisk', 'BMI', 'PhysicalActivity']\n",
+    "\n",
+    "# Initialize the scaler\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "# Apply standardization\n",
+    "df[numerical_columns] = scaler.fit_transform(df[numerical_columns])\n",
+    "\n",
+    "# Display the standardized data\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "dd86449c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Age",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Sex",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "BloodPressure",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "GeneticRisk",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "BMI",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "PhysicalActivity",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Married",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Work",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Smoker",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Diabetes",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "b6992e76-ce70-41c4-8b7c-4e3179e982d5",
+       "rows": [
+        [
+         "0",
+         "0.021911579205346747",
+         "Male",
+         "0.8701994695442667",
+         "0.42186440042326284",
+         "-0.8246351870285628",
+         "0.34685681377787975",
+         "Yes",
+         "Self-employed",
+         "Unknown",
+         "0"
+        ],
+        [
+         "1",
+         "-0.7734244197192961",
+         "Male",
+         "0.09357668033870266",
+         "0.33460369155114145",
+         "-1.1548091024435938",
+         "0.7040420719519593",
+         "No",
+         "Public",
+         "Unknown",
+         "0"
+        ],
+        [
+         "2",
+         "1.4358422439602674",
+         "Male",
+         "0.5595503538620411",
+         "-0.952491764312648",
+         "0.6461395270929402",
+         "0.545293068319035",
+         "Yes",
+         "Self-employed",
+         "Unknown",
+         "1"
+        ],
+        [
+         "3",
+         "-0.5966830866249311",
+         "Female",
+         "-0.993695224549087",
+         "-0.8652310554405268",
+         "-0.584508703090358",
+         "-0.08970294621266185",
+         "Yes",
+         "Private",
+         "Never",
+         "0"
+        ],
+        [
+         "4",
+         "0.11028224575252929",
+         "Male",
+         "0.8701994695442667",
+         "-0.615914744377323",
+         "0.7211790533236291",
+         "-1.0421969680102072",
+         "Yes",
+         "Private",
+         "Smoker",
+         "1"
+        ]
+       ],
+       "shape": {
+        "columns": 10,
+        "rows": 5
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>BloodPressure</th>\n",
+       "      <th>GeneticRisk</th>\n",
+       "      <th>BMI</th>\n",
+       "      <th>PhysicalActivity</th>\n",
+       "      <th>Married</th>\n",
+       "      <th>Work</th>\n",
+       "      <th>Smoker</th>\n",
+       "      <th>Diabetes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.021912</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0.870199</td>\n",
+       "      <td>0.421864</td>\n",
+       "      <td>-0.824635</td>\n",
+       "      <td>0.346857</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Self-employed</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.773424</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0.093577</td>\n",
+       "      <td>0.334604</td>\n",
+       "      <td>-1.154809</td>\n",
+       "      <td>0.704042</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Public</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.435842</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0.559550</td>\n",
+       "      <td>-0.952492</td>\n",
+       "      <td>0.646140</td>\n",
+       "      <td>0.545293</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Self-employed</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.596683</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>-0.993695</td>\n",
+       "      <td>-0.865231</td>\n",
+       "      <td>-0.584509</td>\n",
+       "      <td>-0.089703</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>Never</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.110282</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0.870199</td>\n",
+       "      <td>-0.615915</td>\n",
+       "      <td>0.721179</td>\n",
+       "      <td>-1.042197</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>Smoker</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Age     Sex  BloodPressure  GeneticRisk       BMI  PhysicalActivity  \\\n",
+       "0  0.021912    Male       0.870199     0.421864 -0.824635          0.346857   \n",
+       "1 -0.773424    Male       0.093577     0.334604 -1.154809          0.704042   \n",
+       "2  1.435842    Male       0.559550    -0.952492  0.646140          0.545293   \n",
+       "3 -0.596683  Female      -0.993695    -0.865231 -0.584509         -0.089703   \n",
+       "4  0.110282    Male       0.870199    -0.615915  0.721179         -1.042197   \n",
+       "\n",
+       "  Married           Work   Smoker  Diabetes  \n",
+       "0     Yes  Self-employed  Unknown         0  \n",
+       "1      No         Public  Unknown         0  \n",
+       "2     Yes  Self-employed  Unknown         1  \n",
+       "3     Yes        Private    Never         0  \n",
+       "4     Yes        Private   Smoker         1  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a3e6266f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Age",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "BloodPressure",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "GeneticRisk",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "BMI",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "PhysicalActivity",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Diabetes",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "bb9264d1-1d29-47b6-89c4-d34c91aeb11a",
+       "rows": [
+        [
+         "count",
+         "488.0",
+         "488.0",
+         "488.0",
+         "488.0",
+         "488.0",
+         "488.0"
+        ],
+        [
+         "mean",
+         "2.5480528434019985e-16",
+         "-5.423712480955682e-16",
+         "9.464196275493137e-17",
+         "-9.10018872643571e-17",
+         "-2.766457372836456e-16",
+         "0.5061475409836066"
+        ],
+        [
+         "std",
+         "1.0010261675352694",
+         "1.0010261675352692",
+         "1.0010261675352696",
+         "1.0010261675352696",
+         "1.0010261675352694",
+         "0.5004752512964701"
+        ],
+        [
+         "min",
+         "-1.1269070859080264",
+         "-3.323563592165779",
+         "-1.2641371531416528",
+         "-2.235378280165514",
+         "-2.5899997534312185",
+         "0.0"
+        ],
+        [
+         "25%",
+         "-0.8617950862664786",
+         "-0.6830461088668613",
+         "-0.7156412688026044",
+         "-0.7946193765362872",
+         "-0.7246989607443588",
+         "0.0"
+        ],
+        [
+         "50%",
+         "-0.28738575370979214",
+         "-0.06174787750241014",
+         "-0.23882382389422724",
+         "0.045823317247428816",
+         "-0.16907744802912397",
+         "1.0"
+        ],
+        [
+         "75%",
+         "0.6405062450356245",
+         "0.5595503538620411",
+         "0.47873968388455623",
+         "0.6648994086506126",
+         "0.5849803192272661",
+         "1.0"
+        ],
+        [
+         "max",
+         "4.175332906922926",
+         "3.200067837160959",
+         "6.034597853233638",
+         "4.037926112720079",
+         "3.6805858900692887",
+         "1.0"
+        ]
+       ],
+       "shape": {
+        "columns": 6,
+        "rows": 8
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>BloodPressure</th>\n",
+       "      <th>GeneticRisk</th>\n",
+       "      <th>BMI</th>\n",
+       "      <th>PhysicalActivity</th>\n",
+       "      <th>Diabetes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>4.880000e+02</td>\n",
+       "      <td>4.880000e+02</td>\n",
+       "      <td>4.880000e+02</td>\n",
+       "      <td>4.880000e+02</td>\n",
+       "      <td>4.880000e+02</td>\n",
+       "      <td>488.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2.548053e-16</td>\n",
+       "      <td>-5.423712e-16</td>\n",
+       "      <td>9.464196e-17</td>\n",
+       "      <td>-9.100189e-17</td>\n",
+       "      <td>-2.766457e-16</td>\n",
+       "      <td>0.506148</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.001026e+00</td>\n",
+       "      <td>1.001026e+00</td>\n",
+       "      <td>1.001026e+00</td>\n",
+       "      <td>1.001026e+00</td>\n",
+       "      <td>1.001026e+00</td>\n",
+       "      <td>0.500475</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-1.126907e+00</td>\n",
+       "      <td>-3.323564e+00</td>\n",
+       "      <td>-1.264137e+00</td>\n",
+       "      <td>-2.235378e+00</td>\n",
+       "      <td>-2.590000e+00</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>-8.617951e-01</td>\n",
+       "      <td>-6.830461e-01</td>\n",
+       "      <td>-7.156413e-01</td>\n",
+       "      <td>-7.946194e-01</td>\n",
+       "      <td>-7.246990e-01</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>-2.873858e-01</td>\n",
+       "      <td>-6.174788e-02</td>\n",
+       "      <td>-2.388238e-01</td>\n",
+       "      <td>4.582332e-02</td>\n",
+       "      <td>-1.690774e-01</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>6.405062e-01</td>\n",
+       "      <td>5.595504e-01</td>\n",
+       "      <td>4.787397e-01</td>\n",
+       "      <td>6.648994e-01</td>\n",
+       "      <td>5.849803e-01</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>4.175333e+00</td>\n",
+       "      <td>3.200068e+00</td>\n",
+       "      <td>6.034598e+00</td>\n",
+       "      <td>4.037926e+00</td>\n",
+       "      <td>3.680586e+00</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Age  BloodPressure   GeneticRisk           BMI  \\\n",
+       "count  4.880000e+02   4.880000e+02  4.880000e+02  4.880000e+02   \n",
+       "mean   2.548053e-16  -5.423712e-16  9.464196e-17 -9.100189e-17   \n",
+       "std    1.001026e+00   1.001026e+00  1.001026e+00  1.001026e+00   \n",
+       "min   -1.126907e+00  -3.323564e+00 -1.264137e+00 -2.235378e+00   \n",
+       "25%   -8.617951e-01  -6.830461e-01 -7.156413e-01 -7.946194e-01   \n",
+       "50%   -2.873858e-01  -6.174788e-02 -2.388238e-01  4.582332e-02   \n",
+       "75%    6.405062e-01   5.595504e-01  4.787397e-01  6.648994e-01   \n",
+       "max    4.175333e+00   3.200068e+00  6.034598e+00  4.037926e+00   \n",
+       "\n",
+       "       PhysicalActivity    Diabetes  \n",
+       "count      4.880000e+02  488.000000  \n",
+       "mean      -2.766457e-16    0.506148  \n",
+       "std        1.001026e+00    0.500475  \n",
+       "min       -2.590000e+00    0.000000  \n",
+       "25%       -7.246990e-01    0.000000  \n",
+       "50%       -1.690774e-01    1.000000  \n",
+       "75%        5.849803e-01    1.000000  \n",
+       "max        3.680586e+00    1.000000  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
   }
  ],
  "metadata": {
