--- a/Regression/Linear Regression/Linear_Regression.ipynb
+++ b/Regression/Linear Regression/Linear_Regression.ipynb
@@ -43,7 +43,7 @@
       "source": [
         "---\n",
         "\n",
-        "# Answer 1)"
+        "# **Dataset**"
       ]
     },
     {
@@ -1738,7 +1738,7 @@
       "source": [
         "---\n",
         "\n",
-        "# Answer 2)"
+        "# **Split Dataset to Train & Test**"
       ]
     },
     {
@@ -1763,7 +1763,7 @@
       "source": [
         "---\n",
         "\n",
-        "# Answer 3)"
+        "# **Scatter Plot**"
       ]
     },
     {
@@ -1835,7 +1835,7 @@
       "source": [
         "---\n",
         "\n",
-        "# Answer 4)"
+        "# **Define the Linnear Regression Model**"
       ]
     },
     {
@@ -2150,7 +2150,7 @@
       },
       "source": [
         "---\n",
-        "# Answer 5)"
+        "# **Correlation & Covariance Matrix**"
       ]
     },
     {
