handwritten_digits_classification: Modify the Notebook

--- a/SVM/handwritten_digits_classification/handwritten_digits_classification.ipynb
+++ b/SVM/handwritten_digits_classification/handwritten_digits_classification.ipynb
@@ -78,8 +78,7 @@
         "id": "40LVNSdfyhVW"
       },
       "source": [
-        "---\n",
-        "# **بخش اول.**"
+        "---\n"
       ]
     },
     {
@@ -88,7 +87,7 @@
         "id": "lCTOFYBJytIT"
       },
       "source": [
-        "## 2."
+        "## **Load the Dataset & Visualization**"
       ]
     },
     {
@@ -173,7 +172,8 @@
         "id": "Kligej1Mzzvb"
       },
       "source": [
-        "## الف)"
+        "\n",
+        "## **Image Padding and Resizing**"
       ]
     },
     {
@@ -275,7 +275,7 @@
         "id": "siPrxrfu3WqR"
       },
       "source": [
-        "## ب."
+        "## **Flatten**"
       ]
     },
     {
@@ -351,7 +351,7 @@
         "id": "5It4QFFX5xxe"
       },
       "source": [
-        "## ج."
+        "## **Split the Dataset to Train & Test**"
       ]
     },
     {
@@ -398,7 +398,7 @@
         "id": "8PI8L8jZ6n5z"
       },
       "source": [
-        "## د ، .ه.\n"
+        "## **SVM Classification**\n"
       ]
     },
     {
@@ -634,11 +634,18 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## **Model Robustness Analysis in Different Scenarios**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "ShpLmL0G_h4J"
       },
       "source": [
-        "## خ."
+        "### *Add Salt & Pepper Noise*"
       ]
     },
     {
@@ -738,7 +745,7 @@
         "id": "ovNJprABBuh2"
       },
       "source": [
-        "## ت."
+        "### *Add Rotation*"
       ]
     },
     {
